# --------

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  个性化旅游平台要求.md  要求.md
.claude/: settings.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/algorithms/: compression.py  graph.py  search.py  topk.py  tsp.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  ai.py  auth.py  destinations.py  diaries.py  facilities.py  foods.py  indoor.py  plans.py  routes.py  stats.py
backend/app/core/: config.py  error_handlers.py  exceptions.py  logging.py
backend/app/repositories/: data_loader.py  sqlite_repository.py
backend/app/schemas/: ai.py  destination.py  diary.py  indoor.py  plan.py  routing.py  stats.py
backend/app/scripts/: __init__.py  seed_sqlite.py
backend/app/services/: ai_service.py  auth_service.py  destination_service.py  diary_service.py  facility_service.py  facility_types.py  graph_builder.py  indoor_service.py  plan_service.py  recommendation_service.py  routing_service.py  search_service.py  stats_service.py
backend/scripts/: bootstrap_postgres.sh  init_sqlite.py  seed_db.py  setup_local_postgres.sh
backend/tests/: conftest.py  test_ai_api.py  test_algorithms.py  test_api.py  test_legacy_bupt_import.py  test_sqlite_repository.py
docs/: acceptance-script.md  algorithms.md  api.md  architecture.md  course-requirements.md  deployment-1panel-aliyun.md  prd.md  schema.md  test-plan.md  user-guide.md
frontend/: .env.example  .prettierrc.json  eslint.config.js  (+4 more)
(+122 files in other folders)
